--- a/style.css
+++ b/style.css
@@ -5,5 +5,11 @@ ul {
 }
 
 li {
-    display: inline;
+    float: left;
+}
+
+a {
+    display: block;
+    padding: 8px;
+    background-color: #dddddd;
 }
